--- a/index.html
+++ b/index.html
@@ -1,49 +1,3 @@
-total 88M
--rw-r--r-- 1 qwe qwe 6.2M Nov  1 09:57 0-01-20221101095603.mkv
--rw-r--r-- 1 qwe qwe 3.4M Nov  1 09:58 0-01-20221101095703.mkv
--rw-r--r-- 1 qwe qwe 4.8M Nov  1 10:07 0-02-20221101100622.mkv
--rw-r--r-- 1 qwe qwe 1.5M Nov  1 10:07 0-02-20221101100722.mkv
--rw-r--r-- 1 qwe qwe 2.7M Nov  1 11:46 0-01-20221101114522.mkv
--rw-r--r-- 1 qwe qwe 1.6M Nov  1 11:48 0-01-20221101114622.mkv
--rw-r--r-- 1 qwe qwe  66K Nov  1 11:49 0-01-20221101114818.mkv
--rw-r--r-- 1 qwe qwe 1.7M Nov  1 11:50 0-02-20221101114926.mkv
--rw-r--r-- 1 qwe qwe 236K Nov  1 11:51 0-02-20221101115036.mkv
--rw-r--r-- 1 qwe qwe 487K Nov  1 11:52 0-02-20221101115138.mkv
--rw-r--r-- 1 qwe qwe 161K Nov  1 11:54 0-02-20221101115243.mkv
--rw-r--r-- 1 qwe qwe  62K Nov  1 11:56 0-03-20221101115554.mkv
--rw-r--r-- 1 qwe qwe 489K Nov  1 11:59 0-04-20221101115755.mkv
--rw-r--r-- 1 qwe qwe 469K Nov  1 12:01 0-05-20221101120007.mkv
--rw-r--r-- 1 qwe qwe 1.9M Nov  1 12:02 0-05-20221101120108.mkv
--rw-r--r-- 1 qwe qwe 709K Nov  1 12:03 0-05-20221101120208.mkv
--rw-r--r-- 1 qwe qwe 579K Nov  1 12:04 0-05-20221101120334.mkv
--rw-r--r-- 1 qwe qwe 562K Nov  1 12:05 0-05-20221101120437.mkv
--rw-r--r-- 1 qwe qwe 121K Nov  1 12:06 0-05-20221101120537.mkv
--rw-r--r-- 1 qwe qwe 143K Nov  1 12:10 0-06-20221101120954.mkv
--rw-r--r-- 1 qwe qwe 2.9M Nov  1 12:13 0-07-20221101121245.mkv
--rw-r--r-- 1 qwe qwe  68K Nov  1 12:14 0-07-20221101121352.mkv
--rw-r--r-- 1 qwe qwe 216K Nov  1 12:18 0-08-20221101121729.mkv
--rw-r--r-- 1 qwe qwe 492K Nov  1 12:20 0-08-20221101121834.mkv
--rw-r--r-- 1 qwe qwe 1.6M Nov  1 12:22 0-09-20221101122057.mkv
--rw-r--r-- 1 qwe qwe 315K Nov  1 12:23 0-09-20221101122210.mkv
--rw-r--r-- 1 qwe qwe 115K Nov  1 12:25 0-10-20221101122438.mkv
--rw-r--r-- 1 qwe qwe 154K Nov  1 12:27 0-11-20221101122550.mkv
--rw-r--r-- 1 qwe qwe 471K Nov  1 12:28 0-11-20221101122719.mkv
--rw-r--r-- 1 qwe qwe  90K Nov  1 12:29 0-11-20221101122819.mkv
--rw-r--r-- 1 qwe qwe 134K Nov  1 12:30 0-12-20221101123018.mkv
--rw-r--r-- 1 qwe qwe 3.1M Nov  1 13:24 0-01-20221101132342.mkv
--rw-r--r-- 1 qwe qwe 4.0M Nov  1 13:25 0-01-20221101132444.mkv
--rw-r--r-- 1 qwe qwe 2.4M Nov  1 13:27 0-01-20221101132548.mkv
--rw-r--r-- 1 qwe qwe 2.5M Nov  1 13:28 0-01-20221101132713.mkv
--rw-r--r-- 1 qwe qwe 2.9M Nov  1 13:29 0-01-20221101132845.mkv
--rw-r--r-- 1 qwe qwe 1.3M Nov  1 13:31 0-01-20221101132945.mkv
--rw-r--r-- 1 qwe qwe 596K Nov  1 13:33 0-02-20221101133142.mkv
--rw-r--r-- 1 qwe qwe 1.4M Nov  1 13:34 0-02-20221101133334.mkv
--rw-r--r-- 1 qwe qwe 4.6M Nov  1 13:35 0-02-20221101133438.mkv
--rw-r--r-- 1 qwe qwe 3.3M Nov  1 13:36 0-02-20221101133538.mkv
--rw-r--r-- 1 qwe qwe 2.7M Nov  1 13:37 0-02-20221101133638.mkv
--rw-r--r-- 1 qwe qwe 4.6M Nov  1 13:38 0-02-20221101133738.mkv
--rw-r--r-- 1 qwe qwe 5.4M Nov  1 13:39 0-02-20221101133838.mkv
--rw-r--r-- 1 qwe qwe 2.6M Nov  1 13:40 0-02-20221101133938.mkv
--rw-r--r-- 1 qwe qwe 4.7M Nov  1 13:41 0-02-20221101134038.mkv
--rw-r--r-- 1 qwe qwe 3.2M Nov  1 13:42 0-02-20221101134138.mkv
--rw-r--r-- 1 qwe qwe 5.3M Nov  1 13:43 0-02-20221101134238.mkv
+total 172K
+-rw-r--r-- 1 qwe qwe 85K Nov  2 09:38 0-01-20221102093750.mkv
+-rw-r--r-- 1 qwe qwe 84K Nov  2 09:55 0-02-20221102095452.mkv
