--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
-total 172K
--rw-r--r-- 1 qwe qwe 85K Nov  2 09:38 0-01-20221102093750.mkv
--rw-r--r-- 1 qwe qwe 84K Nov  2 09:55 0-02-20221102095452.mkv
+total 8.6M
+-rw-r--r-- 1 qwe qwe  85K Nov  2 09:38 0-01-20221102093750.mkv
+-rw-r--r-- 1 qwe qwe  84K Nov  2 09:55 0-02-20221102095452.mkv
+-rw-r--r-- 1 qwe qwe 4.8M Nov  2 10:03 0-03-20221102100213.mkv
+-rw-r--r-- 1 qwe qwe 3.7M Nov  2 10:03 0-03-20221102100313.mkv
