--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-total 0
+total 2.1M
+-rw-r--r-- 1 qwe qwe 755K Nov  7 11:16 0-01-20221107111536.mkv
+-rw-r--r-- 1 qwe qwe 723K Nov  7 11:19 0-02-20221107111833.mkv
+-rw-r--r-- 1 qwe qwe 624K Nov  7 11:21 0-03-20221107112000.mkv
