--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-total 0
+total 5.6M
+-rw-r--r-- 1 qwe qwe 4.1M Nov 10 08:11 0-01-20221110081038.mkv
+-rw-r--r-- 1 qwe qwe 1.5M Nov 10 08:13 0-01-20221110081138.mkv
+-rw-r--r-- 1 qwe qwe  76K Nov 10 08:54 0-02-20221110085351.mkv
