--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-total 28M
--rw-r--r-- 1 qwe qwe  94K Nov 12 08:29 0-01-20221112082837.mkv
--rw-r--r-- 1 qwe qwe  93K Nov 12 08:53 0-02-20221112085221.mkv
--rw-r--r-- 1 qwe qwe  95K Nov 12 09:03 0-03-20221112090201.mkv
--rw-r--r-- 1 qwe qwe 133K Nov 12 09:20 0-04-20221112091924.mkv
--rw-r--r-- 1 qwe qwe 4.7M Nov 12 10:06 0-05-20221112100542.mkv
--rw-r--r-- 1 qwe qwe 5.4M Nov 12 10:07 0-05-20221112100642.mkv
--rw-r--r-- 1 qwe qwe 3.8M Nov 12 10:09 0-05-20221112100742.mkv
--rw-r--r-- 1 qwe qwe 6.2M Nov 12 10:15 0-06-20221112101442.mkv
--rw-r--r-- 1 qwe qwe 872K Nov 12 10:15 0-06-20221112101542.mkv
--rw-r--r-- 1 qwe qwe 4.5M Nov 12 11:05 0-01-20221112110455.mkv
--rw-r--r-- 1 qwe qwe 1.7M Nov 12 11:07 0-01-20221112110555.mkv
+total 0
