--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-total 0
+total 12M
+-rw-r--r-- 1 qwe qwe 3.3M Nov 13 19:21 0-01-20221113192007.mkv
+-rw-r--r-- 1 qwe qwe 3.3M Nov 13 19:24 0-02-20221113192336.mkv
+-rw-r--r-- 1 qwe qwe 3.9M Nov 13 19:25 0-02-20221113192436.mkv
+-rw-r--r-- 1 qwe qwe 1.1M Nov 13 19:25 0-02-20221113192536.mkv
