--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
-total 7.5M
+total 8.1M
 -rw-r--r-- 1 qwe qwe 3.9M Nov 16 10:38 0-01-20221116103730.mkv
 -rw-r--r-- 1 qwe qwe 3.7M Nov 16 10:40 0-01-20221116103830.mkv
+-rw-r--r-- 1 qwe qwe 548K Nov 16 11:07 0-02-20221116110617.mkv
