--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-total 13M
--rw-r--r-- 1 qwe qwe 4.5M Nov 18 15:31 0-01-20221118152942.mkv
--rw-r--r-- 1 qwe qwe 3.8M Nov 18 18:47 0-02-20221118184617.mkv
--rw-r--r-- 1 qwe qwe 412K Nov 18 18:48 0-02-20221118184717.mkv
--rw-r--r-- 1 qwe qwe 3.2M Nov 18 18:49 0-03-20221118184859.mkv
--rw-r--r-- 1 qwe qwe 461K Nov 18 18:50 0-03-20221118184959.mkv
+total 928K
+-rw-r--r-- 1 qwe qwe 102K Nov 19 08:59 0-01-20221119085817.mkv
+-rw-r--r-- 1 qwe qwe  56K Nov 19 09:01 0-02-20221119090024.mkv
+-rw-r--r-- 1 qwe qwe 768K Nov 19 09:58 0-03-20221119095851.mkv
