--- a/index.html
+++ b/index.html
@@ -1,9 +1,2 @@
-total 31M
--rw-r--r-- 1 qwe qwe 3.4M Nov 22 12:58 0-01-20221122125712.mkv
--rw-r--r-- 1 qwe qwe 3.7M Nov 22 12:59 0-01-20221122125818.mkv
--rw-r--r-- 1 qwe qwe 4.2M Nov 22 13:00 0-01-20221122125918.mkv
--rw-r--r-- 1 qwe qwe 3.2M Nov 22 13:02 0-01-20221122130018.mkv
--rw-r--r-- 1 qwe qwe 6.0M Nov 22 13:03 0-01-20221122130203.mkv
--rw-r--r-- 1 qwe qwe 4.9M Nov 22 13:03 0-01-20221122130303.mkv
--rw-r--r-- 1 qwe qwe 3.3M Nov 22 13:06 0-01-20221122130457.mkv
--rw-r--r-- 1 qwe qwe 1.9M Nov 22 13:07 0-01-20221122130615.mkv
+total 72K
+-rw-r--r-- 1 qwe qwe 69K Nov 23 08:58 0-01-20221123085729.mkv
