--- a/index.html
+++ b/index.html
@@ -1,7 +1,1 @@
-total 14M
--rw-r--r-- 1 qwe qwe  69K Nov 23 08:58 0-01-20221123085729.mkv
--rw-r--r-- 1 qwe qwe 4.3M Nov 23 10:02 0-02-20221123100108.mkv
--rw-r--r-- 1 qwe qwe 3.6M Nov 23 10:03 0-02-20221123100208.mkv
--rw-r--r-- 1 qwe qwe 298K Nov 23 10:04 0-02-20221123100308.mkv
--rw-r--r-- 1 qwe qwe 2.6M Nov 23 10:11 0-03-20221123101114.mkv
--rw-r--r-- 1 qwe qwe 2.5M Nov 23 11:13 0-01-20221123111145.mkv
+total 0
