--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-total 0
+total 9.0M
+-rw-r--r-- 1 qwe qwe 3.7M Nov 27 19:06 0-01-20221127190522.mkv
+-rw-r--r-- 1 qwe qwe 3.5M Nov 27 19:07 0-01-20221127190622.mkv
+-rw-r--r-- 1 qwe qwe 1.9M Nov 27 19:08 0-01-20221127190730.mkv
