--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-total 102M
+total 104M
 -rw-r--r-- 1 qwe qwe 4.6M Dec  2 08:42 0-01-20221202084106.mkv
 -rw-r--r-- 1 qwe qwe 4.9M Dec  2 08:43 0-01-20221202084206.mkv
 -rw-r--r-- 1 qwe qwe 2.9M Dec  2 08:44 0-01-20221202084306.mkv
@@ -33,4 +33,5 @@ total 102M
 -rw-r--r-- 1 qwe qwe 4.3M Dec  2 16:06 0-03-20221202160552.mkv
 -rw-r--r-- 1 qwe qwe 2.5M Dec  2 16:07 0-03-20221202160652.mkv
 -rw-r--r-- 1 qwe qwe 3.4M Dec  2 16:11 0-01-20221202161053.mkv
--rw-r--r-- 1 qwe qwe 512K Dec  2 16:12 0-01-20221202161153.mkv
+-rw-r--r-- 1 qwe qwe 2.1M Dec  2 16:12 0-01-20221202161153.mkv
+-rw-r--r-- 1 qwe qwe 256K Dec  2 16:12 0-01-20221202161255.mkv
