--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-total 9.4M
+total 12M
 -rw-r--r-- 1 qwe qwe 5.0M Dec  5 09:07 0-01-20221205090603.mkv
 -rw-r--r-- 1 qwe qwe 3.6M Dec  5 09:08 0-01-20221205090703.mkv
 -rw-r--r-- 1 qwe qwe 369K Dec  5 09:09 0-01-20221205090803.mkv
--rw-r--r-- 1 qwe qwe 512K Dec  5 11:34 0-02-20221205113423.mkv
+-rw-r--r-- 1 qwe qwe 707K Dec  5 11:35 0-02-20221205113423.mkv
+-rw-r--r-- 1 qwe qwe 1.8M Dec  5 19:20 0-03-20221205192034.mkv
