--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-total 0
--rw-r--r-- 1 qwe qwe 0 Dec  6 08:10 0-01-20221206081059.mkv
+total 6.9M
+-rw-r--r-- 1 qwe qwe 3.9M Dec  6 08:12 0-01-20221206081059.mkv
+-rw-r--r-- 1 qwe qwe 3.0M Dec  6 08:12 0-01-20221206081209.mkv
