--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-total 768K
--rw-r--r-- 1 qwe qwe 768K Dec  7 11:12 0-01-20221207111156.mkv
+total 6.4M
+-rw-r--r-- 1 qwe qwe 5.9M Dec  7 11:12 0-01-20221207111156.mkv
+-rw-r--r-- 1 qwe qwe 512K Dec  7 11:13 0-01-20221207111256.mkv
