--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
-total 6.4M
+total 11M
 -rw-r--r-- 1 qwe qwe 5.9M Dec  7 11:12 0-01-20221207111156.mkv
--rw-r--r-- 1 qwe qwe 512K Dec  7 11:13 0-01-20221207111256.mkv
+-rw-r--r-- 1 qwe qwe 4.5M Dec  7 11:13 0-01-20221207111256.mkv
+-rw-r--r-- 1 qwe qwe 256K Dec  7 11:13 0-01-20221207111356.mkv
