--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-total 0
--rw-r--r-- 1 qwe qwe 0 Dec  8 08:21 0-01-20221208082130.mkv
+total 1.6M
+-rw-r--r-- 1 qwe qwe  74K Dec  8 08:22 0-01-20221208082130.mkv
+-rw-r--r-- 1 qwe qwe 1.5M Dec  8 10:07 0-02-20221208100737.mkv
