--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-total 256K
--rw-r--r-- 1 qwe qwe 256K Dec 10 08:10 0-01-20221210081053.mkv
+total 4.1M
+-rw-r--r-- 1 qwe qwe 2.3M Dec 10 08:12 0-01-20221210081053.mkv
+-rw-r--r-- 1 qwe qwe 1.8M Dec 10 10:08 0-02-20221210100836.mkv
