--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-total 7.2M
+total 11M
 -rw-r--r-- 1 qwe qwe 2.3M Dec 10 08:12 0-01-20221210081053.mkv
 -rw-r--r-- 1 qwe qwe 4.2M Dec 10 10:09 0-02-20221210100836.mkv
--rw-r--r-- 1 qwe qwe 768K Dec 10 10:09 0-02-20221210100936.mkv
+-rw-r--r-- 1 qwe qwe 3.2M Dec 10 10:10 0-02-20221210100936.mkv
+-rw-r--r-- 1 qwe qwe 1.3M Dec 10 10:10 0-02-20221210101036.mkv
