--- a/index.html
+++ b/index.html
@@ -15,4 +15,5 @@ total 48M
 -rw-r--r-- 1 qwe qwe 3.9M Dec 10 11:12 0-01-20221210111153.mkv
 -rw-r--r-- 1 qwe qwe 2.4M Dec 10 11:13 0-01-20221210111259.mkv
 -rw-r--r-- 1 qwe qwe 2.7M Dec 10 11:15 0-01-20221210111359.mkv
--rw-r--r-- 1 qwe qwe    0 Dec 10 11:36 0-02-20221210113617.mkv
+-rw-r--r-- 1 qwe qwe  72K Dec 10 11:37 0-02-20221210113617.mkv
+-rw-r--r-- 1 qwe qwe    0 Dec 10 11:40 0-03-20221210114031.mkv
